syntax = "proto3";

package atc.v1;

message Node {
  int32 longitude = 1;
  int32 latitude = 2;
}

message Point {
  int32 x = 1;
  int32 y = 2;
}

message NodeToPointRequest {
  Node node = 1;
}

message NodeToPointResponse {
  Point point = 1;
}

service MapService {
  rpc NodeToPoint(NodeToPointRequest) returns (NodeToPointResponse);
}
