syntax = "proto3";

package atc.v1;

import "atc/v1/airplane.proto";
import "atc/v1/location.proto";
import "atc/v1/node.proto";

message AirplaneDetected {
  Airplane airplane = 1;
}

message AirplaneLanded {
  string id = 1;
}

message AirplaneMoved {
  string id = 1;
  Location location = 2;
}

message FlightPlanUpdated {
  string id = 1;
  repeated Node flight_plan = 2;
}

message GameStarted {}

message GameStopped {}

message StreamRequest {}

message StreamResponse {
  oneof event {
    AirplaneDetected airplane_detected = 1;
    AirplaneLanded airplane_landed = 2;
    AirplaneMoved airplane_moved = 3;
    FlightPlanUpdated flight_plan_updated = 4;
    GameStarted game_started = 5;
    GameStopped game_stopped = 6;
  }
}

service EventService {
  rpc Stream(StreamRequest) returns (stream StreamResponse) {}
}
